<?xml version="1.0"?>
<package>
  <name>pylon_camera</name>
  <version>0.0.1</version>
  <description>Proprietary Package for the Pylon Camera. Supports DART, USB3 and GigE camera.s</description>

  <maintainer email="engelhard@magazino.eu">Nikolas Engelhard</maintainer>

  <license>proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>pylon4</build_depend>
  <build_depend>camera_control_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>pylon4</run_depend>
  <run_depend>camera_control_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rand</run_depend>

</package>
