<?xml version="1.0"?>
<package>
  <name>pylon_camera</name>

  <author>Marcel Debout</author>
  <author>Markus Grimm</author>
  <author>Nikolas Engelhard</author>
  <maintainer email="debout@magazino.eu">Marcel Debout</maintainer>
  <maintainer email="grimm@magazino.eu">Markus Grimm</maintainer>
  <maintainer email="engelhard@magazino.eu">Nikolas Engelhard</maintainer>

  <version>0.0.20</version>
  <license>Apache2.0</license>

  <description>
  	Proprietary Package for Basler Cameras using the the Pylon API.
  	- Supports DART, USB3 and GigE cameras.
  	- Setting Brightness and Exposure using Services.
  </description>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>pylon</build_depend>
  <build_depend>camera_control_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <!--build_depend>std_srvs</build_depend-->
  <build_depend>roslint</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>pylon</run_depend>
  <run_depend>camera_control_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <!--run_depend>std_srvs</run_depend-->

</package>
