<?xml version="1.0"?>
<package>
  <name>camera_control_msgs</name>

  <author>Marcel Debout</author>
  <author>Markus Grimm</author>
  <author>Nikolas Engelhard</author>
  <maintainer email="debout@magazino.eu">Marcel Debout</maintainer>
  <maintainer email="grimm@magazino.eu">Markus Grimm</maintainer>
  <maintainer email="engelhard@magazino.eu">Nikolas Engelhard</maintainer>

  <version>0.0.4</version>
  <license>Apache2.0</license>

  <description>
    Message Package for Pylon Camera
  </description>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
</package>
