<?xml version="1.0"?>
<package>
  
  <name>camera_control_msgs</name>

  <version>0.2.5</version>

  <description>
      Message package from the pylon_camera package.
      Contains action and service definitions of the pylon_camera interface.
  </description>

  <author>Marcel Debout</author>
  <author>Markus Grimm</author>
  <author>Nikolas Engelhard</author>
  <author>Pablo Quilez</author>
  <author>Saif Abdullah</author>

  <maintainer email="pablo.quilez@dragandbot.com">Pablo Quilez</maintainer>
  <maintainer email="saif.abdullah@dragandbot.com">Saif Abdullah</maintainer>

  <license>BSD</license>

  <url>https://github.com/basler/pylon-ros-camera</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
